# akonta

./: .gitignore  README.md  pubspec.yaml  pyproject.toml  requirements.txt
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/ishiro/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: main.py
src/components/: __init__.py  glass_container.py
src/components/layout/: __init__.py  pager.py  routes.py  side_menu.py  side_menu_button.py  top_bar.py
src/components/layout/partial/: __init__.py  top_bar_title.py
src/components/layout/partial/side_bar/: side_menu_button.py
src/components/layout/partial/top_bar/: avatar.py  settings_menu.py
src/components/partial/: __init__.py  avatar.py  side_menu_button.py  top_bar_title.py
src/components/partial/top_bar/: search_bar.py
src/extras/: enums.py  routes.py  store.py  tools.py
src/models/: Akonta.mdj  __init__.py  akonta.py  category.py  customer.py  invoice.py  product.py  sale.py  settings.py  shop.py  transaction.py  user.py
src/pages/: dashboard.py  product.py  stock.py
src/themes/: __init__.py  dark.py  light.py
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
