[project]
name = "Akonta"
version = "0.1.0"
description = "Inventory management software for small businesses and retail stores."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Rezolusoft HQ", email = "info@rezolusoft.com" }
    { name = "Abiodoun Paraiso", email = "contact@abiodoun.dev" }

]
dependencies = [
  "flet==0.28.3"
]

[tool.flet]
org = "com.rezolusoft"
product = "Akonta"
company = "Rezolusoft"
copyright = "Copyright (C) 2025 by Rezolusoft"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}